--- a/main/Ludologia a narratologia.tex
+++ b/main/Ludologia a narratologia.tex
@@ -1,3 +1,7 @@
-\begin{frame}{Problem ludologiczno-narracyjny w grach komputerowych}
-Współczesne gry komputerowe są jedną z najważniejszych form mediów interaktywnych, a ich popularność rośnie zarówno w wąskich kręgach graczy, jak i w szerszym kontekście kulturowym. Przez te lata gry stopniowo zmieniały się z prostej rozrywki w wyrafinowane formy doświadczeń, które łączą w sobie różne aspekty: od grafiki, przez dźwięk, aż po fabułę. Prawdopodobnie najbardziej ekscytującą i złożoną kwestią, która pojawia się w analizach gier, jest to, co zostało nazwane problemem ludologiczno-narracyjnym. Pytanie brzmi, w jaki sposób mechanika gry - ludologia - łączy się z fabułą - narracją - w grach komputerowych i jakie wyzwanie stanowi to zarówno dla twórców gier, jak i badaczy.
+\begin{frame}{Ludologia a narratologia}
+Pierwszym krokiem do zrozumienia problemu ludologii i narracji w grach komputerowych jest wyjaśnienie dwóch podstawowych terminów: ludologii i narratologii.
+
+Ludologia jest nauką o grach; dotyczy mechanizmów gry, analizy zasad i sposobu, w jaki gracz wchodzi z nią w interakcję. Z ludologicznego punktu widzenia ważne jest, aby zwrócić uwagę na cel gry, jej zasady, wyzwania i nagrody, sposób, w jaki gracz ingeruje w jej przebieg.
+
+Z kolei narratologia to dziedzina badań zajmująca się teorią narracji lub sposobem, w jaki opowiadane są historie. W przypadku gier komputerowych narratologia bada, w jaki sposób wirtualne światy, postacie, fabuła i dialogi współgrają ze sobą, tworząc interesującą historię.
 \end{frame}
