--- a/main/Podsumowanie.tex
+++ b/main/Podsumowanie.tex
@@ -1,8 +1,4 @@
-\begin{frame}{Ludologia a narratologia}
-Pierwszym krokiem do zrozumienia problemu ludologii i narracji w grach komputerowych jest wyjaśnienie dwóch podstawowych terminów: ludologii i narratologii.
-
-Ludologia jest nauką o grach; dotyczy mechanizmów gry, analizy zasad i sposobu, w jaki gracz wchodzi z nią w interakcję. Z ludologicznego punktu widzenia ważne jest, aby zwrócić uwagę na cel gry, jej zasady, wyzwania i nagrody, sposób, w jaki gracz ingeruje w jej przebieg.
-
-Z kolei narratologia to dziedzina badań zajmująca się teorią narracji lub sposobem, w jaki opowiadane są historie. W przypadku gier komputerowych narratologia bada, w jaki sposób wirtualne światy, postacie, fabuła i dialogi współgrają ze sobą, tworząc interesującą historię.
+\begin{frame}{Podsumowanie}
+Jednym z głównych wyzwań współczesnej produkcji gier jest problem ludologii i narracji w grach komputerowych. Wymagałoby to delikatnego balansowania między mechaniką a narracją, aby zaoferować graczowi wciągające, ale satysfakcjonujące doświadczenie. Gry komputerowe z każdym rokiem stają się coraz bardziej złożone, a ich granice między zabawą a opowiadaniem historii stopniowo się zacierają. To, w jaki sposób twórcy gier połączą te dwa elementy w przyszłości, może zadecydować o przyszłości gier jako medium artystycznego.
 
 \end{frame}
