--- a/main/Maksymilian_Subocz_284371.tex
+++ b/main/Maksymilian_Subocz_284371.tex
@@ -1,7 +1,7 @@
 \documentclass{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\title{Problem ludologiczno-narracyjny w grach komputerowych}
+\title{Problem ludologiczno narracyjny w grach komputerowych}
 \author{Maksymilian Subocz}
 \date{\today}
 \usepackage{beamerthemesplit}
@@ -14,6 +14,6 @@
 \input{Historia_i_rozwój_problemu}
 \input{Wyzwania_i_kontrowersje}
 \input{Podsumowanie}
-\input{bibliografia}
+\input{Bibliografia}
 
 \end{document}
